2012-06-11 Nikolay Nemshilov

  * Version 2.0.0
  * FontAwesome is the default source of icons
  * New buttons/icons realations

        :html
        <a href="" class="lui-button lui-icon-ok">Okay</a>

    This makes an embedded into the button icon with gray background

        :html
        <a href="" class="lui-button"><i class="lui-icon-ok"></i>Okay</a>

    This makes the icon to be inlined in the button along with the caption text

  * The old button-like icons were moved to the buttons functionality, and `UI.Icon`
    now just an icon, without any borders or backgrounds

2012-06-04 Nikolay Nemshilov

  * Version 1.2.0
  * The `UI.Menu` unit was added
  * Spinner stylesheet adjustments

2012-05-05 Nikolay Nemshilov

  * Version 1.1.2
  * The fancy events processing fix for correct event objects bypassing

2012-05-04 Nikolay Nemshilov

  * Version 1.1.1
  * Modal unit size-limits processing fixes
  * Modal unit fix with jumpy inner block in tight spaces
  * Buttons stylesheet fix in case when it's used with links

2012-05-04 Nikolay Nemshilov

  * Version 1.1.0
  * Icons/Buttons better CSS styling
  * Better looking Spinner element
  * Locker element can accept the Spinner `size` option
  * Darker Modal screen locker
  * Modal now bypasses the #html and #text methods as well
  * Modal now fires the show/hide events automatically
  * Modal now automatically sets the internal element max sizes

2012-03-25 Nikolay Nemshilov

  * Version 1.0.1 release
  * Icons fix for the next/prev buttons
  * Disabling the user-select event on icons and buttons
  * Adding the `lui-disabled` class for icons and buttons

2012-03-24 Nikolay Nemshilov

  * Version 1.0.0 release