@@ -134,6 +134,26 @@
       <a href="#" class="lui-button"><i class="lui-icon-signout"></i></a>
     </p>
 
+    <h2>Buttons Group</h2>
+    <p>
+      <div class="lui-button-group">
+        <a href="#" class="lui-button"><i class="lui-icon-ok"></i></a>
+        <a href="#" class="lui-button"><i class="lui-icon-edit"></i></a>
+        <a href="#" class="lui-button"><i class="lui-icon-trash"></i></a>
+        <a href="#" class="lui-button"><i class="lui-icon-remove"></i></a>
+      </div>
+      <div class="lui-button-group">
+        <a href="#" class="lui-button"><i class="lui-icon-align-left"></i></a>
+        <a href="#" class="lui-button"><i class="lui-icon-align-right"></i></a>
+        <a href="#" class="lui-button"><i class="lui-icon-align-center"></i></a>
+        <a href="#" class="lui-button"><i class="lui-icon-align-justify"></i></a>
+      </div>
+      <div class="lui-button-group">
+        <a href="#" class="lui-button"><i class="lui-icon-signin"></i></a>
+        <a href="#" class="lui-button"><i class="lui-icon-signout"></i></a>
+      </div>
+    </p>
+
     <h2>Programmatically Created Buttons</h2>
     <p>
       <div id="buttons-demo"></div>
